@@ -202,14 +202,15 @@ class Kronolith
             'login_view' => $prefs->getValue('defaultview') == 'workweek' ? 'week' : $prefs->getValue('defaultview'),
             'default_calendar' => 'internal|' . self::getDefaultCalendar(Horde_Perms::EDIT),
             'week_start' => (int)$prefs->getValue('week_start_monday'),
+            'max_events' => (int)$prefs->getValue('max_events'),
             'date_format' => str_replace(array('%e', '%d', '%a', '%A', '%m', '%h', '%b', '%B', '%y', '%Y'),
                                          array('d', 'dd', 'ddd', 'dddd', 'MM', 'MMM', 'MMM', 'MMMM', 'yy', 'yyyy'),
                                          Horde_Nls::getLangInfo(D_FMT)),
             'time_format' => $prefs->getValue('twentyFour') ? 'HH:mm' : 'hh:mm tt',
             'status' => array('tentative' => self::STATUS_TENTATIVE,
-                             'confirmed' => self::STATUS_CONFIRMED,
-                             'cancelled' => self::STATUS_CANCELLED,
-                             'free' => self::STATUS_FREE),
+                              'confirmed' => self::STATUS_CONFIRMED,
+                              'cancelled' => self::STATUS_CANCELLED,
+                              'free' => self::STATUS_FREE),
             'recur' => array(Horde_Date_Recurrence::RECUR_NONE => 'None',
                              Horde_Date_Recurrence::RECUR_DAILY => 'Daily',
                              Horde_Date_Recurrence::RECUR_WEEKLY => 'Weekly',
@@ -346,6 +347,7 @@ class Kronolith
             'agenda' => _("Agenda"),
             'searching' => sprintf(_("Events matching \"%s\""), '#{term}'),
             'allday' => _("All day"),
+            'more' => _("more..."),
             'prefs' => _("Options"),
             'no_url' => _("You must specify a URL."),
             'wrong_auth' => _("The authentication information you specified wasn't accepted."),
